--- a/汇编入门/第三章寄存器(内存访问).md
+++ b/汇编入门/第三章寄存器(内存访问).md
@@ -234,12 +234,97 @@ push 和 pop 指令是可以在寄存器和内存之间的传送数据的.
 
 指令执行时,CPU要知道内存单元的地址,可以在 push,pop 指令中给出内存单元的偏移地址,段地址在指令执行时,CPU从`ds`中取得.
 
+**结论**
+
+push,pop 实质上就是一种内存传送指令,可以在寄存器和内存之间传送数据,与`mov`指令不同的是,`push`和`pop`指令访问的内存单元的地址不是在指令中给出的,而是由`SS:SP`指出的.
+
+同时,`push`和`pop`指令还要改变`SP`中的内容.
+
+CPU执行`mov`指令只需`一步`操作,就是传送.而执行`push`,`pop`指令却需要`两步`操作.
+
+* 执行`push`时(写内存):
+	* 先改变`SP`(-2).
+	* 后向`SS:SP`处传送.
+* 执行`pop`时(读内存):
+	* 先读取`SS:SP`处的数据
+	* 后改变`SP`(+2).
+
+`push`,`pop`等栈操作指令,修改的只是`SP`(+2,-2).也就是说,栈顶的变化范围最大为:`0~FFFF`H(H:16进制,2^16).`64KB`范围.现在CPU没这么小,这里是因为16位CPU.
+
+FFFFH = 0 ~ FFFFH = = 65535 + 1 = 65536 Byte = 65536 / 1024 = 64 KiB
+
 #### 栈段
 
-###整理知识点
+对于8086PC机,在编程时,我们可以根据需要,将一组内存单元定义为一个段.
+
+我们可以将长度为 N (N<=64K)的一组地址连续,起始地址为16的倍数的内存单元,当作栈来使用,从而定义了一个栈段.
+
+		比如我们将10010H~1001FH,这段长度为16字节的内存空间当作栈来用,以栈的方式进行访问.
+		这段空间就可以成为栈段,段地址为1000H,大小为16字节(10-1F).
+		
+将一段内存当作栈段,仅仅是我们在编程时的一种安排,CPU并不会由于这种安排,就在执行PUSH,POP等栈操作指令时就自动地将我们定义的栈段当作栈空间来空间来访问.CPU只认`SS:SP`.
+
+任意时刻,`SS:SP`指向栈顶元素,当栈为空的时候,栈中没有元素,也就不存在栈顶元素,所以`SP`只能指向栈的对底部单元下面的单元,该单元的偏移地址为栈地步的字单元的偏移地址+2,栈最底部字单元的地址为1000:FFFE(假设),所以栈空时,SP=0000H.
+
+**一个栈段最大可以设为多少?为什么**
+
+栈顶的变化范围是0~FFFFH,从栈空时候的SP=0,一直压栈,知道栈满时SP=0;如果再次压栈,栈顶将环绕,覆盖了原来栈中的内容.
+
+最大是64KB,在8086CPU中,现在不止这么大.
+
+**栈为什么重要**
+
+早起栈用于保存返回地址.C语言从main函数开始,main函数结尾.假设A函数调用B函数,需要把A函数中寄存器数据临时保存起来,所以用栈,当调用结束的时候可以恢复.
+
+栈可以说为了函数而存在.
+
+#### 总结
+
+* 任意时刻,`SS:SP`指向栈顶元素.
+* 8086CPU只记录栈顶, 栈控件的大小我们要自己管理.
+* 用栈来暂存以后需要恢复的寄存器的内容时,寄存器出栈的顺序要和入栈的顺序`相反`.
+* `push`,`pop`实质上一种内存传送指令.
+
+CPU 将内存中的某段内存当作代码,是以为内`CS:IP`指向了那里.CPU将某段内存当做栈,是以为内SS:IP指向了那里.
+
+### 整理知识点
 
 ---
 
 #### 函数局部变量
 
 局部变量存在栈中,所以当函数出了栈,局部变量失效.
+
+#### 函数
+
+		main 函数调用 a 函数. main 函数中的所有寄存器都会入栈, 调用完 a 函数后,所有寄存器出栈,继续做自己函数的事情.
+		
+#### 清空一个寄存器的几种方法.		
+		
+mov ax,0 = sub ax,ax = 系统使用 xor ax,ax (xor 亦或,一样就置为0,不一样置为1,以为ax=ax,所以为0)
+
+sub 机器码是两个字节, mov 机器码是三个字节.
+
+#### KiB,MiB与KB,MB的区别 
+
+MB等单位以10为底数的指数,MiB是以2为底数的指数.
+
+1KB=10^3=1000, 1MB=10^6=1000000=1000KB,1GB=10^9=1000000000=1000MB
+
+KiB=2^10=1024,1MiB=2^20=1048576=1024KiB
+
+操作系统报的数量要比产品标出或商家号称的小一些,主要原因是标出的是以MB,GB为单位的.1GB就是1,000,000,000 Byte,而操作系统是以2进制为处理单位的,因此检查硬盘容量时是以MiB,GiB为单位.
+
+1GB=2^30=1,073,741,824,相比较而言,1GiB要比1GB多出1,073,741,824-1,000,000,000=73,741,824,所以检测实际结果要比标出的少一些.
+
+		十进制单位                              二进制单位
+		------------------------------------------------------ 	 
+		名字 	缩写 	次方 	 名字 	缩写 	次方
+		kilobyte 	KB 	10^3 	kibibyte 	KiB 	2^10
+		megabyte 	MB 	10^6 	mebibyte 	MiB 	2^20
+		gigabyte 	GB 	10^9 	gibibyte 	GiB 	2^30
+		terabyte 	TB 	10^12 	tebibyte 	TiB 	2^40
+		petabyte 	PB 	10^15 	pebibyte 	PiB 	2^50
+		exabyte 	EB 	10^18 	exbibyte 	EiB 	2^60
+		zettabyte 	ZB 	10^21 	zebibyte 	ZiB 	2^70
+		yottabyte 	YB 	10^24 	yobibyte 	YiB 	2^80
