--- a/Modern PHP/第二章_特性.md
+++ b/Modern PHP/第二章_特性.md
@@ -328,6 +328,8 @@ $closure 变量实现了__invoke()魔术方法,只要变量名后由(),PHP就会
 
 **use**
 
+use是连接闭包和外界变量.
+
 使用`use`关键字附加闭包的状态:
 
 		function enclosePerson ($name) {
