--- a/餐巾纸的背面/餐巾纸的背面.md
+++ b/餐巾纸的背面/餐巾纸的背面.md
@@ -152,3 +152,55 @@
 * 流程图 -> 怎么样 -> 原因 + 效果
 * 多重变量图 -> 为什么 -> 演绎 + 推测
 
+#### 六六法则 和 SQVID
+
+坐标y轴为六六法则的框架,具体选择哪一种框架可以根据六六法则.
+
+坐标x轴位`SQVID`.
+
+		
+				S	Q	V	I	D
+		谁/什么?
+		有多少?
+		在哪里?
+		在什么时候?
+		怎么样?
+		为什么?
+		
+### 视觉化思考
+
+#### 电脑和paper work?
+
+过分依赖电脑,似乎更容易削弱我们视觉化思考的能力,而不是帮助我们把这种能力充分发挥出来.
+
+#### 画像(谁/什么): 基本绘画方法与要求
+
+* 构思的简单一点
+* 丰富你的内容清单
+* 用形象化的方式向别人描述
+
+#### 图片(有多少): 基本绘画方法与要求
+
+* 数据才是最重要的,所以我们要把它清楚地标识出来
+* 选一个最简单的图示来陈述自己的观点
+* 如果你开始用了某一种画图模型,就要坚持用下去
+
+要把数量通过形象化的方式展示出来,要让人们能够一目了然.
+
+**柱状图**
+
+用于比较某件事物的绝对数量
+
+**曲线图**
+
+按照两种不同的标准比较事物的绝对数量,或者比较他们在不同时间的绝对数量.
+
+**饼状图**
+
+用于比较不同事物所占的比例,展示它们之间的相对数量.
+
+**泡泡图**
+
+当要比较的标准超过两种时.
+
+		
