--- a/餐巾纸的背面/餐巾纸的背面.md
+++ b/餐巾纸的背面/餐巾纸的背面.md
@@ -203,4 +203,37 @@
 
 当要比较的标准超过两种时.
 
+#### 布局(在哪里): 基本绘画方法与要求
+
+说明`在哪里`的问题细的说明性内容: 包括各部分的界限在哪里,它们之间相差多远,彼此之间有什么联系,又有什么共同的特征等等.
+
+* 每个事物都有自己的脉络.所有事物都由许多独特的要素构成,它们都可以用"布局图"表现出来,哪怕构成它们的要素有些是城市和河流,有些是概念和创意.
+* "坐标"就是创意驰骋的国度.
+	* 东西南本
+	* 好,次,低廉,昂贵
+	* 上下左右
+	* ...
+* 突破显而易见的等级结构,会看到更多.
+
+#### 时间轴(在什么时候): 基本绘画方法与要求
+
+* 时间是条单行道
+* 重复的时间形成生命循环
+* 环形vs线性
+	* 循环性的时间轴在很多方卖弄都可以更精确地表示重复的生命循环圈.
+	
+#### 流程图(怎么样): 基本绘画方法与要求
+
+#### 多重变量图(为什么): 基本绘画方法与要求
+
+* 重点突出
+* 稀稠适度. 变量太少,不足以让我们发掘出问题的关键. 变量太多,就回到了起点,要考虑的事情太多,最后一件也完不成.
+* 任何东西都可以叠加在别的东西上,但是...
+	* 将`关联`(即不同变量的相似趋向这种假象)与`因果作用`(一个变量对另一个变量的直接影响)区别开.
+
+#### 结论
+
+![瑞士军刀](./01.png "瑞士军刀")
+
+
 		
