--- a/linux-马哥视频/19_03_bind97服务安装配置.md
+++ b/linux-马哥视频/19_03_bind97服务安装配置.md
@@ -518,7 +518,7 @@ DNS:
 		;; WHEN: 三 11月 23 10:46:48 CST 2016
 		;; MSG SIZE  rcvd: 78
 
-12. 反向区域解析(注意域名后面有一个`.`,我第一次编辑这个少些了一个点则报错)
+12. 反向区域解析(注意域名后面有一个`.`,我第一次编辑这个少写了一个点则报错)
 
 		编辑/etc/named.conf,添加
 		zone "88.44.10.in-addr.arpa" IN {
@@ -538,7 +538,7 @@ DNS:
 		189	IN	PTR	ns1.chloroplast.com.
 		1	IN	PTR	mail.chloroplast.com.
 		2	IN	PTR	www.chloroplast.com.
-		3	IN	PTR 	www.chloroplast.com.
+		3	IN	PTR www.chloroplast.com.
 
 		重启named服务
 		
