2018年12月 4日 星期二 03时30分13秒 CST

--- a/linux-马哥视频/43_02_IO复用详解及高并发系统设计初步.md
+++ b/linux-马哥视频/43_02_IO复用详解及高并发系统设计初步.md
@@ -69,6 +69,8 @@ nonblocking I/O.
 
 I/O multiplexing
 
+**区别**, 第一段的阻塞是被`select()`阻塞掉, 而不是被`socket IO`阻塞掉.
+
 ### 事件驱动I/O
 
 ![](./img/43_02_5.png)
