--- a/个人学习计划/2018-10 第五周个人学习计划.md
+++ b/个人学习计划/2018-10 第五周个人学习计划.md
@@ -1,6 +1,8 @@
-# 2018-10 第五周个人学习计划
+# 2018-10 - 11 -12 2个月学习计划补全
 
 ## 方向
+
+加班, 时间紧张. 不能预估学习计划. 这里记录平时空余时间的学习
 
 ## 细节
 
@@ -9,3 +11,26 @@
 		* Docker基础技术：Linux Namespace（上）
 		* Docker基础技术：Linux Namespace（下）
 		* Linux PID 1 和 Systemd
+* 书
+	* 大话数据结构
+		* 7.8
+		* 7.9
+		* 7.10
+		* 7.11
+* 视频
+	* 44_02_Nginx反向代理、负载均衡、缓存、URL重写及读写分离
+	* 44_03_memcached安装配置及保存php session于memcached中的方法
+* 音频
+	* Linux性能优化实战 
+		* 开篇词 - 别再让Linux性能问题成为你的绊脚石**done**
+		* 01 - 如何学习Linux性能优化？**done** 
+	* 深入剖析Kubernetes
+		* 10 | Kubernetes一键部署利器：kubeadm
+		* 11 | 从0到1：搭建一个完整的Kubernetes集群
+	* 趣谈网络协议
+		* 第14讲 | HTTP协议：看个新闻原来这么麻烦
+		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂
+	* 从0开始学架构
+		* 13 | 架构设计流程：详细方案设计
+		* 14 | 高性能数据库集群：读写分离
+		* 15 | 高性能数据库集群：分库分表 
