2018年12月 4日 星期二 03时33分21秒 CST

--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -17,6 +17,18 @@
 		* 7.9
 		* 7.10
 		* 7.11
+	* 架构整洁之道
+		* 第1章 **done**
+		* 第2章 **done**
+		* 第3章 **done**
+		* 第4章 **done**
+		* 第5章 **done**
+		* 第6章 **done**
+		* 第7章 **done**
+		* 第8章 **done**
+		* 第9章 **done**
+		* 第10章 **done**
+		* 第11章 **done**
 * 视频
 	* 44_02_Nginx反向代理、负载均衡、缓存、URL重写及读写分离
 	* 44_03_memcached安装配置及保存php session于memcached中的方法
