2018年12月 5日 星期三 12时30分39秒 CST

--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -43,6 +43,6 @@
 		* 第14讲 | HTTP协议：看个新闻原来这么麻烦
 		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂
 	* 从0开始学架构
-		* 13 | 架构设计流程：详细方案设计
+		* 13 | 架构设计流程：详细方案设计 **done**
 		* 14 | 高性能数据库集群：读写分离
 		* 15 | 高性能数据库集群：分库分表 
