--- a/从0开始学架构/13 - 架构设计流程：详细方案设计.md
+++ b/从0开始学架构/13 - 架构设计流程：详细方案设计.md
@@ -2,6 +2,30 @@
 
 ## 笔记 
 
+### 详细方案设计
 
+将关键技术细节确定下来
+
+#### Nginx 负载均衡策略
+
+##### 轮询(默认) 
+
+每个请求按时间顺序逐一分配到不同的后端服务器, 后端服务器分配的请求数基本一致.
+
+##### 加权轮询
+
+根据权重来进行轮询, 权重高的服务器分配的请求更多. 用于后端服务器性能不均的情况.
+
+##### ip_hash
+
+每个请求按访问的`IP`的`hash`结果分配, 这样每个访客固定访问一个后端服务器, 解决`session`问题.
+
+##### fair
+
+按后端服务器的**响应时间**来分配请求, 响应时间短的优先分配, 能够最大化地平衡后端服务器的压力. 适用于后端服务器性能不均衡的情况, 防止某带后端服务器性能不足的情况下还继续接受同样的请求从而造成雪崩效应.
+
+##### url_hash
+
+按访问`URL`的`hash`结果来分配请求, 每个`URL`定向到同一个后端服务器, 适用于后端服务器能够将`URL`的响应结果缓存的情况.
 
 ## 扩展
