--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -44,5 +44,5 @@
 		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂
 	* 从0开始学架构
 		* 13 | 架构设计流程：详细方案设计 **done**
-		* 14 | 高性能数据库集群：读写分离
+		* 14 | 高性能数据库集群：读写分离 **done**
 		* 15 | 高性能数据库集群：分库分表 
