--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -40,9 +40,10 @@
 		* 10 | Kubernetes一键部署利器：kubeadm
 		* 11 | 从0到1：搭建一个完整的Kubernetes集群
 	* 趣谈网络协议
-		* 第14讲 | HTTP协议：看个新闻原来这么麻烦
-		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂
+		* 第14讲 | HTTP协议：看个新闻原来这么麻烦 **no 音频**
+		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂 **no 音频**
+		* 第16讲 | 流媒体协议：如何在直播里看到美女帅哥？
 	* 从0开始学架构
 		* 13 | 架构设计流程：详细方案设计 **done**
 		* 14 | 高性能数据库集群：读写分离 **done**
-		* 15 | 高性能数据库集群：分库分表 
+		* 15 | 高性能数据库集群：分库分表 **done**
