2018年12月 7日 星期五 21时44分55秒 CST

--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -43,7 +43,11 @@
 		* 第14讲 | HTTP协议：看个新闻原来这么麻烦 **no 音频**
 		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂 **no 音频**
 		* 第16讲 | 流媒体协议：如何在直播里看到美女帅哥？
+		* 第17讲 | P2P协议：我下小电影，99%急死你 
 	* 从0开始学架构
 		* 13 | 架构设计流程：详细方案设计 **done**
 		* 14 | 高性能数据库集群：读写分离 **done**
 		* 15 | 高性能数据库集群：分库分表 **done**
+		* 16 | 高性能NoSQL **no 音频**
+		* 17 | 高性能缓存架构
+		* 18 | 单服务器高性能模式：PPC与TPC 
