2018年12月 8日 星期六 23时34分28秒 CST

--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -29,6 +29,9 @@
 		* 第9章 **done**
 		* 第10章 **done**
 		* 第11章 **done**
+		* 第12章 **done**
+		* 第13章 **done**
+		* 第14章 **done**
 * 视频
 	* 44_02_Nginx反向代理、负载均衡、缓存、URL重写及读写分离
 	* 44_03_memcached安装配置及保存php session于memcached中的方法
@@ -40,7 +43,7 @@
 		* 10 | Kubernetes一键部署利器：kubeadm
 		* 11 | 从0到1：搭建一个完整的Kubernetes集群
 	* 趣谈网络协议
-		* 第14讲 | HTTP协议：看个新闻原来这么麻烦 **no 音频**
+		* 第14讲 | HTTP协议：看个新闻原来这么麻烦 **done**
 		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂 **no 音频**
 		* 第16讲 | 流媒体协议：如何在直播里看到美女帅哥？
 		* 第17讲 | P2P协议：我下小电影，99%急死你 
@@ -48,6 +51,6 @@
 		* 13 | 架构设计流程：详细方案设计 **done**
 		* 14 | 高性能数据库集群：读写分离 **done**
 		* 15 | 高性能数据库集群：分库分表 **done**
-		* 16 | 高性能NoSQL **no 音频**
-		* 17 | 高性能缓存架构
+		* 16 | 高性能NoSQL **done**
+		* 17 | 高性能缓存架构 **done**
 		* 18 | 单服务器高性能模式：PPC与TPC 
