2018年12月 9日 星期日 00时11分44秒 CST

--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -47,6 +47,20 @@
 		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂 **no 音频**
 		* 第16讲 | 流媒体协议：如何在直播里看到美女帅哥？
 		* 第17讲 | P2P协议：我下小电影，99%急死你 
+		* 第18讲 | DNS协议：网络世界的地址簿
+		* 第19讲 | HTTPDNS：网络世界的地址簿也会指错路
+		* 第20讲 | CDN：你去小卖部取过快递么？
+		* 第21讲 | 数据中心：我是开发商，自己拿地盖别墅
+		* 第22讲 | VPN：朝中有人好做官
+		* 第23讲 | 移动网络：去巴塞罗那，手机也上不了脸书
+		* 第24讲 | 云中网络：自己拿地成本高，购买公寓更灵活
+		* 第25讲 | 软件定义网络：共享基础设施的小区物业管理办法
+		* 第26讲 | 云中的网络安全：虽然不是土豪，也需要基本安全和保障
+		* 第27讲 | 云中的网络QoS：邻居疯狂下电影，我该怎么办？
+		* 第28讲 | 云中网络的隔离GRE、VXLAN：虽然住一个小区，也要保护隐私
+		* 第29讲 | 容器网络：来去自由的日子，不买公寓去合租
+		* 第30讲 | 容器网络之Flannel：每人一亩三分地
+		* 第31讲 | 容器网络之Calico：为高效说出善意的谎言
 	* 从0开始学架构
 		* 13 | 架构设计流程：详细方案设计 **done**
 		* 14 | 高性能数据库集群：读写分离 **done**
