2018年12月 9日 星期日 13时40分21秒 CST

--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -44,8 +44,8 @@
 		* 11 | 从0到1：搭建一个完整的Kubernetes集群
 	* 趣谈网络协议
 		* 第14讲 | HTTP协议：看个新闻原来这么麻烦 **done**
-		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂 **no 音频**
-		* 第16讲 | 流媒体协议：如何在直播里看到美女帅哥？
+		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂 **done**
+		* 第16讲 | 流媒体协议：如何在直播里看到美女帅哥？**no 音频**
 		* 第17讲 | P2P协议：我下小电影，99%急死你 
 		* 第18讲 | DNS协议：网络世界的地址簿
 		* 第19讲 | HTTPDNS：网络世界的地址簿也会指错路
