2018年12月 9日 星期日 22时42分20秒 CST

--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -11,6 +11,8 @@
 		* Docker基础技术：Linux Namespace（上）
 		* Docker基础技术：Linux Namespace（下）
 		* Linux PID 1 和 Systemd
+	* 杂记
+		* IO模型
 * 书
 	* 大话数据结构
 		* 7.8
@@ -67,4 +69,10 @@
 		* 15 | 高性能数据库集群：分库分表 **done**
 		* 16 | 高性能NoSQL **done**
 		* 17 | 高性能缓存架构 **done**
-		* 18 | 单服务器高性能模式：PPC与TPC 
+		* 18 | 单服务器高性能模式：PPC与TPC **no 音频**
+		* 19 | 单服务器高性能模式：Reactor与Proactor **no 音频**
+		* 20 | 高性能负载均衡：分类及架构 **no 音频**
+		* 21 | 高性能负载均衡：算法
+		* 22 | 想成为架构师，你必须知道CAP理论
+		* 23 | 想成为架构师，你必须掌握的CAP细节
+		* 24 | FMEA方法，排除架构可用性隐患的利器
