--- a/linux-马哥视频/43_02_IO复用详解及高并发系统设计初步.md
+++ b/linux-马哥视频/43_02_IO复用详解及高并发系统设计初步.md
@@ -71,7 +71,21 @@ I/O multiplexing
 
 **区别**, 第一段的阻塞是被`select()`阻塞掉, 而不是被`socket IO`阻塞掉.
 
-### 事件驱动I/O
+* `select/poll`
+
+```
+老李去火车站买票，委托黄牛，然后每隔6小时电话黄牛询问，黄牛三天内买到票，然后老李去火车站交钱领票。
+耗费：往返车站2次，路上2小时，黄牛手续费100元，打电话17次
+```
+
+* `epoll`
+
+```
+老李去火车站买票，委托黄牛，黄牛买到后即通知老李去领，然后老李去火车站交钱领票。
+耗费：往返车站2次，路上2小时，黄牛手续费100元，无需打电话
+```
+
+### 信号驱动I/O
 
 ![](./img/43_02_5.png)
 
@@ -131,3 +145,6 @@ MPM:
 ### 缓存 
 
 缓存: 因为数据**局部性**
+
+### IO模型
+
