2018年12月 9日 星期日 23时29分52秒 CST

--- a/趣谈网络协议/第17讲 - P2P协议：我下小电影，99%急死你.md
+++ b/趣谈网络协议/第17讲 - P2P协议：我下小电影，99%急死你.md
@@ -83,6 +83,46 @@
 
 #### 哈希值
 
+`DHT node`不会有全局只是, 也不知道所有的文件保存在哪. 它需要知道的这一部分,需要用**哈希算法**计算出来.
 
+每个文件可以计算一个哈希值, **DHT node 的 ID 是和哈希值相同长度的串**.
+
+DHT 算法规定: **如果一个文件计算出一个哈希值, 这这个夏至一样的那个 DHT node, 就有责任知道从哪里下载这个文件, 即便它没有保存这个文件**.
+
+**ID和这个哈希值非常接近的N个DHT node 也应该知道**(万一哈希值一样的节点都下线了)
+
+**哈希值接近**, 修改倒数N位, 凑齐N个节点为止.
+
+#### DHT 网络示例
+
+一个新的节点上线, 想下载文件1.
+
+* 种子`.torrent`文件里面是一个`list`的`node`地址(不再是`tracker`地址), 假设总有一个能联系上.
+* 只要在种子里面找到一个`DHT node`, 就加入网络.
+* 计算文件1的哈希值, 根据这个哈希值了解到, 匹配或者很接近的`node`上知道如何下载这个文件, 假如是`node C`.
+* 新的`node`不知道如何联系`C`, 因为种子里面的`node`可能没有`node C`. 
+* 在`DHT`网络中, 每个`node`都保存了一定的联系方式, 但是没有`node`的所有联系方式.
+* 新的`node`只能去问, 朋友在问朋友. 如果找不到C, 就找和C的`ID`很像的节点.
+* `node C`, 告诉新加入的`node`, 下载文件1, 需要去B,D,F. 
+* 新`node`选择和`node B`进行`peer`连接, 开始下载.
+* 新`node`拥有了文件1, 告诉`node C`以及和`node C`很像的节点, 我也有文件1了,可以假如那个文件拥有者列表了.
+* 现在新`node`还没有文件索引, 后续在`DHT`节点网络中, 会有节点告诉它, 新`node`也有责任知道某些文件的下载地址(文建索引)
+
+#### DHT ID相似
+
+通过异或(XOR)计算. 
+
+```
+01010 与 01000 的距离是两个ID的异或值, 为00010, 也即为2.
+01010 与 00010 的距离为 01000, 即为8
+01010 与 00011 的举例为 01001, 即8+1=9
+```
+
+* 高位不同, 表示距离远一些
+* 低位不同, 表示距离更近一些
+
+总的距离为所有的不同的位的举例之和.
+
+**不能比喻为物理位置**, 在`Kademila`网络中, 位置近不算近, ID近才算近.
 
 ## 扩展
