--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -48,7 +48,7 @@
 		* 第14讲 | HTTP协议：看个新闻原来这么麻烦 **done**
 		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂 **done**
 		* 第16讲 | 流媒体协议：如何在直播里看到美女帅哥？**no 音频**
-		* 第17讲 | P2P协议：我下小电影，99%急死你 
+		* 第17讲 | P2P协议：我下小电影，99%急死你 **no 音频**
 		* 第18讲 | DNS协议：网络世界的地址簿
 		* 第19讲 | HTTPDNS：网络世界的地址簿也会指错路
 		* 第20讲 | CDN：你去小卖部取过快递么？
