--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -34,6 +34,22 @@
 		* 第12章 **done**
 		* 第13章 **done**
 		* 第14章 **done**
+		* 第15章 
+		* 第16章 
+		* 第17章 
+		* 第18章 
+		* 第19章
+		* 第20章
+		* 第21章
+		* 第22章
+		* 第23章
+		* 第24章
+		* 第25章
+		* 第26章
+		* 第27章
+		* 第28章
+		* 第29章
+		* 第30章  
 * 视频
 	* 44_02_Nginx反向代理、负载均衡、缓存、URL重写及读写分离
 	* 44_03_memcached安装配置及保存php session于memcached中的方法
@@ -72,7 +88,7 @@
 		* 18 | 单服务器高性能模式：PPC与TPC **no 音频**
 		* 19 | 单服务器高性能模式：Reactor与Proactor **no 音频**
 		* 20 | 高性能负载均衡：分类及架构 **no 音频**
-		* 21 | 高性能负载均衡：算法
-		* 22 | 想成为架构师，你必须知道CAP理论
+		* 21 | 高性能负载均衡：算法 **no 音频**
+		* 22 | 想成为架构师，你必须知道CAP理论 **no 音频**
 		* 23 | 想成为架构师，你必须掌握的CAP细节
 		* 24 | FMEA方法，排除架构可用性隐患的利器
