--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -65,8 +65,8 @@
 		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂 **done**
 		* 第16讲 | 流媒体协议：如何在直播里看到美女帅哥？**no 音频**
 		* 第17讲 | P2P协议：我下小电影，99%急死你 **no 音频**
-		* 第18讲 | DNS协议：网络世界的地址簿
-		* 第19讲 | HTTPDNS：网络世界的地址簿也会指错路
+		* 第18讲 | DNS协议：网络世界的地址簿 **no 音频**
+		* 第19讲 | HTTPDNS：网络世界的地址簿也会指错路 **no 音频**
 		* 第20讲 | CDN：你去小卖部取过快递么？
 		* 第21讲 | 数据中心：我是开发商，自己拿地盖别墅
 		* 第22讲 | VPN：朝中有人好做官
