2018年12月19日 星期三 13时24分58秒 CST

--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -67,7 +67,7 @@
 		* 第17讲 | P2P协议：我下小电影，99%急死你 **no 音频**
 		* 第18讲 | DNS协议：网络世界的地址簿 **no 音频**
 		* 第19讲 | HTTPDNS：网络世界的地址簿也会指错路 **no 音频**
-		* 第20讲 | CDN：你去小卖部取过快递么？
+		* 第20讲 | CDN：你去小卖部取过快递么？**no 音频**
 		* 第21讲 | 数据中心：我是开发商，自己拿地盖别墅
 		* 第22讲 | VPN：朝中有人好做官
 		* 第23讲 | 移动网络：去巴塞罗那，手机也上不了脸书
@@ -85,7 +85,7 @@
 		* 15 | 高性能数据库集群：分库分表 **done**
 		* 16 | 高性能NoSQL **done**
 		* 17 | 高性能缓存架构 **done**
-		* 18 | 单服务器高性能模式：PPC与TPC **no 音频**
+		* 18 | 单服务器高性能模式：PPC与TPC **done**
 		* 19 | 单服务器高性能模式：Reactor与Proactor **no 音频**
 		* 20 | 高性能负载均衡：分类及架构 **no 音频**
 		* 21 | 高性能负载均衡：算法 **no 音频**
