2018年12月21日 星期五 10时33分51秒 CST

--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -13,6 +13,7 @@
 		* Linux PID 1 和 Systemd
 	* 杂记
 		* IO模型
+		* 微信红包高并发
 * 书
 	* 大话数据结构
 		* 7.8
@@ -63,10 +64,10 @@
 	* 趣谈网络协议
 		* 第14讲 | HTTP协议：看个新闻原来这么麻烦 **done**
 		* 第15讲 | HTTPS协议：点外卖的过程原来这么复杂 **done**
-		* 第16讲 | 流媒体协议：如何在直播里看到美女帅哥？**no 音频**
-		* 第17讲 | P2P协议：我下小电影，99%急死你 **no 音频**
-		* 第18讲 | DNS协议：网络世界的地址簿 **no 音频**
-		* 第19讲 | HTTPDNS：网络世界的地址簿也会指错路 **no 音频**
+		* 第16讲 | 流媒体协议：如何在直播里看到美女帅哥？**done**
+		* 第17讲 | P2P协议：我下小电影，99%急死你 **done**
+		* 第18讲 | DNS协议：网络世界的地址簿 **done**
+		* 第19讲 | HTTPDNS：网络世界的地址簿也会指错路 **done**
 		* 第20讲 | CDN：你去小卖部取过快递么？**no 音频**
 		* 第21讲 | 数据中心：我是开发商，自己拿地盖别墅
 		* 第22讲 | VPN：朝中有人好做官
@@ -86,9 +87,9 @@
 		* 16 | 高性能NoSQL **done**
 		* 17 | 高性能缓存架构 **done**
 		* 18 | 单服务器高性能模式：PPC与TPC **done**
-		* 19 | 单服务器高性能模式：Reactor与Proactor **no 音频**
-		* 20 | 高性能负载均衡：分类及架构 **no 音频**
-		* 21 | 高性能负载均衡：算法 **no 音频**
-		* 22 | 想成为架构师，你必须知道CAP理论 **no 音频**
+		* 19 | 单服务器高性能模式：Reactor与Proactor **done**
+		* 20 | 高性能负载均衡：分类及架构 **done**
+		* 21 | 高性能负载均衡：算法 **done**
+		* 22 | 想成为架构师，你必须知道CAP理论 **done**
 		* 23 | 想成为架构师，你必须掌握的CAP细节
 		* 24 | FMEA方法，排除架构可用性隐患的利器
