--- a/从0开始学架构/21 - 高性能负载均衡：算法.md
+++ b/从0开始学架构/21 - 高性能负载均衡：算法.md
@@ -4,7 +4,7 @@
 
 ### 分类
 
-* 任务平分类: 任务平均分配给服务器进行处理.
+* 任务平分类: 任务**平均**分配给服务器进行处理.
 * 负载均衡类: 根据服务器的负载来进行分配. (CPU, IO使用率, 连接数)
 * 性能最优类: 根据服务器的响应时间.
 * `Hash`类: 根据任务中的某些关键信息进行`Hash`运算, 将相同`Hash`值的请求分配到同一台服务器上.
@@ -45,7 +45,7 @@
 
 **客户端角度来分配**, 优先将任务分配给处理速度最快的服务器, 通过这种方式达到最快响应客户端的目的.
 
-通过**响应时间**这个外部标准来衡量服务器状态而已.
+通过**响应时间**这个**外部标准**来衡量服务器状态而已.
 
 复杂度:
 
