--- a/趣谈网络协议/第16讲 - 流媒体协议：如何在直播里看到美女帅哥？.md
+++ b/趣谈网络协议/第16讲 - 流媒体协议：如何在直播里看到美女帅哥？.md
@@ -12,7 +12,7 @@
 
 图片都是由**像素**组成的.
 
-解释像素为(1024*768). 每个像素由`RGB`组成, 每个`8`位, 共`24`位.
+解释像素为(1024*768). 每个像素由`RGB`(三原色)组成, 每个`8`位, 共`24`位.
 
 
 ```
@@ -70,7 +70,7 @@ AVI、MPEG、RMVB、MP4、MOV、FLV、WebM、WMV、ASF、MKV.
 
 #### 拉流
 
-通过视频的**分发**网络, 从不同的服务器上拉流.
+通过视频的**分发**网络, 从边缘节点服务器上拉流, 降低中心服务器压力.
 
 #### 解码
 
@@ -87,7 +87,7 @@ AVI、MPEG、RMVB、MP4、MOV、FLV、WebM、WMV、ASF、MKV.
 视频序列分成三种帧
 
 * `|帧`, 关键帧. 完整的图片, 只需要本帧数据, 就可以完成解码.
-* `P帧`, 前向预测编码帧. P帧表示的是这一帧跟之前的一个关键帧(或P帧)的差别. **解码时需要用之前缓存的画面, 叠加上和本帧定义的差别, 生成最终画面**
+* `P帧`, 前向预测编码帧. P帧表示的是这一帧跟**之前的一个关键帧(或P帧)的差别**. **解码时需要用之前缓存的画面, 叠加上和本帧定义的差别, 生成最终画面**
 * `B帧`, 双向预测内插编码帧. B帧记录的是本帧与前后帧的差别. 要解码B帧, 需要之前的缓存画面, 还要解码之后的画面, 通过前后画面的数据与本帧的叠加, 取得最终的画面.
 
 #### 通过时序进行编码
@@ -109,6 +109,13 @@ NALU:
 	* `0x07`表示`SPS`, 序列参数集, 包括一个图像序列的所有信息, 图像尺寸, 视频格式.
 	* `0x08`表示`PPS`, 图像参数集, 包括一个图像的所有分片的所有相关信息, 图片类型, 序列号等.
 * `Payload`里面是`NALU`承载的数据.
+
+**SPS, PPS**在传输视频流之前, 必须要传输这两类参数, 不然无法解码. 为了保证容错性, 每一个`I`帧前面, 都会传一遍这两个参数集合.
+
+* 如果`NALU Header`里面的表示类型是`SPS`或者`PPS`, 则`Payload`中就是真正的参数集的内容.
+* 如果`NALU Header`里面表示的类型是帧, 则`Payload`中才是真正视频数据.
+
+每一个`NALU`里面保存的是**一片**. 对于每一片到底是`I帧`,`P帧`还是`B帧`, 在片结构里面也有个`Heade`, 里面有个**类型**, 然后是片的内容.
 
 #### 总结
 
@@ -155,7 +162,7 @@ NALU:
 
 ![](./img/16_06.jpg)
 
-`RTMP`在手法数据的时候并不是以`Message`为单位的, 而是把`Message`拆分成`Chunk`发送, **必须在一个Chunk发送完成后, 才能开始发送下一个Chunk**. 每个`Chunk`中都带有`Message ID`, 表示属于哪个`Message`, 接收端也会按照这个`ID`将`Chkun`组装成`Message`.
+`RTMP`在手法数据的时候并不是以`Message`为单位的, 而是把`Message`拆分成`Chunk`发送, **必须在一个Chunk发送完成后, 才能开始发送下一个Chunk**. 每个`Chunk`中都带有`Message ID`, 表示属于哪个`Message`, 接收端也会按照这个`ID`将`Chunk`组装成`Message`.
 
 Chunk块大小就是指这个Chunk. 将大的消息变为小的块再发送, 可以在低带宽的情况下, 减少网络拥塞.
 
