--- a/趣谈网络协议/第17讲 - P2P协议：我下小电影，99%急死你.md
+++ b/趣谈网络协议/第17讲 - P2P协议：我下小电影，99%急死你.md
@@ -11,23 +11,24 @@
 	* reter 取一个文件
 	* store 存一个文件
 * 数据连接: 每当一个文件在客户端与服务器之间传输, 就创建一个数据连接.
+	* 对于每一个文件都要新建一个数据链接.
 
 #### FTP 的两种工作模式
 
 * 主动模式(PORT)
 * 被动模式(PASV)
 
-##### 主动模式
+##### 主动模式(服务器主动连接)
 
 **服务器连接客户端**
 
-客户端随机打开一个大于`1024`的端口`N`, 向服务器的命令端口`21`发起连接, 同时开放`N+1`端口监听, 并向服务器发出`port N+1`命令, 有服务器从自己的数据端口`20`主动连接到客户端指定的数据端口`N+1`.
+客户端随机打开一个大于`1024`的端口`N`, 向服务器的命令端口`21`发起连接, 同时开放`N+1`端口监听, 并向服务器发出`port N+1`命令, 有服务器从自己的数据端口`20`**主动连接**到客户端指定的数据端口`N+1`.
 
-##### 被动模式
+##### 被动模式(服务器被动连接)
 
 **客户端连接服务器端**
 
-当开启一个`FTP`连接时, 客户端打开两个任意的本地端口`N`(大于`1024`)和`N+1`. 第一个端口连接服务器的`21`端口, 提交`PASV`命令. 然后, 服务器会开启一个任意的端口`P`(大于1024), 返回`227 entering passive mode`消息, 里面有`FTP`服务器开放的用来进行数据传输的端口. 客户端收到消息取得端口之后, 会通过`N+1`号端口连接服务器的端口`P`, 然后在两个端口之间进行数据传输.
+当开启一个`FTP`连接时, 客户端打开两个任意的本地端口`N`(大于`1024`)和`N+1`. 第一个端口连接服务器的`21`端口, 提交`PASV`命令. 然后, 服务器会开启一个任意的端口`P`(大于1024), 返回`227 entering passive mode`消息, 里面有`FTP`服务器开放的用来进行数据传输的端口. **客户端收到消息取得端口之后, 会通过`N+1`号端口连接服务器的端口`P`, 然后在两个端口之间进行数据传输**.
 
 ### P2P是什么
 
@@ -48,7 +49,7 @@
 	* `info`区, 该种子有几个文件, 文件有多长, 目录结构, 以及目录和文件的名字.
 	* `Name`字段, 指定顶层目录名字.
 	* 每个段的大小: BitTorrent协议把一个文件分成很多小段, 然后分段下载.
-	* 段哈希值: 将整个种子中, 每个段的`SHA-1`哈希值拼在一起.
+	* 段哈希值: 将整个种子中, 每个段的`SHA-1`哈希值拼在一起.(用来鉴别下载数据正确与否)
 
 #### 下载过程
 
