2018年12月24日 星期一 14时23分40秒 CST

--- a/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
+++ b/个人学习计划/2018-10 - 11 -12 2个月学习计划补全.md
@@ -68,7 +68,7 @@
 		* 第17讲 | P2P协议：我下小电影，99%急死你 **done**
 		* 第18讲 | DNS协议：网络世界的地址簿 **done**
 		* 第19讲 | HTTPDNS：网络世界的地址簿也会指错路 **done**
-		* 第20讲 | CDN：你去小卖部取过快递么？**no 音频**
+		* 第20讲 | CDN：你去小卖部取过快递么？**done**
 		* 第21讲 | 数据中心：我是开发商，自己拿地盖别墅
 		* 第22讲 | VPN：朝中有人好做官
 		* 第23讲 | 移动网络：去巴塞罗那，手机也上不了脸书
